# polymarket-copy-trading-bot-rust

./: .gitignore  README.md
rust/: .env.example  README.md  run.bat
rust(中文)/: .gitignore  Cargo.toml  README.md  run.sh
rust(中文)/docs/: 01_快速开始.md  02_设置指南.md  03_配置指南.md  04_功能说明.md  05_交易策略.md  06_故障排除.md
rust(中文)/scripts/: build_sports_cache.py  realtime_divergence.py  start_divergence_monitor.sh
rust(中文)/src/: market_cache.rs  profiler.rs  resubmit_tests.rs  soccer_markets.rs
rust/docs/: 01_QUICK_START.md  02_SETUP_GUIDE.md  03_CONFIGURATION.md  04_FEATURES.md  05_STRATEGY.md  06_TROUBLESHOOTING.md
rust/scripts/: build_live_cache.py  divergence_server.py  fetch_categorized_atp.py  fetch_ligue1.py
rust/src/: lib.rs  main.rs  risk_guard.rs  settings.rs  tennis_markets.rs
